--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <title>Sortieralgorithmen</title>
     <!--    bootstrap-->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sortieralgorithmen visualisiert">
+    <meta name="keywords" content="Sortieralgorithmen, Sortieren, Algorithmen, Visualisierung">
+    <meta name="author" content="Leon Rabe">
+
+<!--    meta tags für den link-->
+    <meta property="og:title" content="Sortieralgorithmen">
+    <meta property="og:description" content="Sortieralgorithmen visualisiert">
+    <meta property="og:image" content="https://image2.slideserve.com/5308501/sortieralgorithmen-l.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Sortieralgorithmen">
+    <meta property="og:locale" content="de_DE">
+
     <style>
         #sortArea{
             height: 100%;
