--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 </head>
 <body>
     <div style="display: flex; align-items: center; margin: 10px 0; justify-content: space-evenly; flex-wrap: wrap">
-        <div style="display: flex; align-items: center; gap: 10px;">
+        <div style="display: flex; align-items: center; gap: 10px; flex-wrap: wrap">
             <label for="input">How many Bars:</label>
             <input type="number" id="input" placeholder="How many Bars" min="2" value="256" max="5000" style="width: 100px" onchange="createBars(this.value)">
             <label for="twiceNumbers">Twice Numbers</label>
