--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
             max-width: 500px;
             margin-top: 10px;
 
+            background: #f6f7f8;
+            border-radius: 5px;
+
         }
 
     </style>
