--- a/index.html
+++ b/index.html
@@ -250,6 +250,28 @@
                 <li><strong>Autor:</strong> Der Autor des Algorithmus, falls bekannt.</li>
                 <li><strong>Jahr:</strong> Das Jahr, in dem der Algorithmus entwickelt wurde.</li>
             </ul>
+
+            <h5>Benutzte Farben:</h5>
+            <ul>
+                <li><span style="color: blue">■</span> Lesen: Ein Lesezugriff auf ein Element der Liste.</li>
+                <li><span style="color: red">■</span> Tauschen: Ein Tauschvorgang zwischen zwei Elementen der Liste.</li>
+                <li><span style="color: yellow">■</span> Schreiben: Ein Schreibzugriff auf ein Element der Liste.</li>
+                <li><span style="color: green">■</span> Fertig: Ein Element ist an der richtigen Position.</li>
+            </ul>
+
+            <h5>Benutzte Methoden der Math Klasse:</h5>
+            <ul>
+                <li><strong><a href="https://developer.mozilla.org/de/docs/Web/JavaScript/Reference/Global_Objects/Math/random" target="_blank" style="text-decoration: underline">Math.random()</a></strong>: Gibt eine Pseudozufallszahl zwischen 0 und 1 zurück.</li>
+                <li><strong><a href="https://developer.mozilla.org/de/docs/Web/JavaScript/Reference/Global_Objects/Math/floor" target="_blank" style="text-decoration: underline">Math.floor()</a></strong>: Rundet eine Zahl auf die nächstkleinere Ganzzahl ab.</li>
+                <li><strong><a href="https://developer.mozilla.org/de/docs/Web/JavaScript/Reference/Global_Objects/Math/max" target="_blank" style="text-decoration: underline">Math.max()</a></strong>: Gibt die größte Zahl einer Liste von Zahlen zurück.</li>
+                <li><strong><a href="https://developer.mozilla.org/de/docs/Web/JavaScript/Reference/Global_Objects/Math/min" target="_blank" style="text-decoration: underline">Math.min()</a></strong>: Gibt die kleinste Zahl einer Liste von Zahlen zurück.</li>
+            </ul>
+
+            <h5>Eigene Methoden:</h5>
+            <ul>
+                <li><strong>swap(i, j)</strong>: Vertauscht die Balken an den Positionen i und j.</li>
+            </ul>
+
         </div>
 
         <div>
