--- a/index.html
+++ b/index.html
@@ -932,7 +932,9 @@ function gnomeSort(array){
     <footer style="background-color: #f8f9fa; padding: 20px; text-align: center; margin-top: 20px;">
         <p>&copy; 2024 Leon Rabe. Alle Rechte vorbehalten.</p>
         <p>
-            <a href="https://leonlp9.github.io/PrivatLinkTree/">Kontakt</a>
+            <a href="https://leonlp9.github.io/PrivatLinkTree/">Kontakt</a> |
+            <a href="https://github.com/Leonlp9/Sortieralgorithmen" target="_blank">Github Repository</a>
+
         </p>
     </footer>
 
