--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
     swap(i, randomIndex);
 }</code></pre>
 
-            <a href="#" onclick="(async () => { createBars(64); await shuffle(); })()" class="btn btn-success">Teste den Shuffle</a>
+            <a href="#sort" onclick="(async () => { createBars(64); await shuffle(); })()" class="btn btn-success">Teste den Shuffle</a>
 
         </div>
 
@@ -350,7 +350,7 @@
                 </a>
             </div>
 
-            <a href="#" onclick="(async () => { createBars(5); await shuffle(); resetStats(); await bogoSort(); })()" class="btn btn-success">Teste den Bogo Sort</a>
+            <a href="#sort" onclick="(async () => { createBars(5); await shuffle(); resetStats(); await bogoSort(); })()" class="btn btn-success">Teste den Bogo Sort</a>
 
         </div>
         <div>
@@ -386,7 +386,7 @@
                 </a>
             </div>
 
-            <a href="#" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await bubbleSort(); })()" class="btn btn-success">Teste den Bubble Sort</a>
+            <a href="#sort" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await bubbleSort(); })()" class="btn btn-success">Teste den Bubble Sort</a>
 
         </div>
         <div>
@@ -426,7 +426,7 @@
                 </a>
             </div>
 
-            <a href="#" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await selectionSort(); })()" class="btn btn-success">Teste den Selection Sort</a>
+            <a href="#sort" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await selectionSort(); })()" class="btn btn-success">Teste den Selection Sort</a>
 
         </div>
         <div>
@@ -465,7 +465,7 @@
                 </a>
             </div>
 
-            <a href="#" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await insertionSort(); })()" class="btn btn-success">Teste den Insertion Sort</a>
+            <a href="#sort" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await insertionSort(); })()" class="btn btn-success">Teste den Insertion Sort</a>
 
         </div>
         <div>
@@ -520,7 +520,7 @@ function merge(left, right){
                 </a>
             </div>
 
-            <a href="#" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await mergeSort(); })()" class="btn btn-success">Teste den Merge Sort</a>
+            <a href="#sort" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await mergeSort(); })()" class="btn btn-success">Teste den Merge Sort</a>
 
         </div>
         <div>
@@ -570,7 +570,7 @@ function partition(array, low, high){
                 </a>
             </div>
 
-            <a href="#" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await quickSort(); })()" class="btn btn-success">Teste den Quick Sort</a>
+            <a href="#sort" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await quickSort(); })()" class="btn btn-success">Teste den Quick Sort</a>
 
         </div>
         <div>
@@ -626,7 +626,7 @@ function heapify(array, n, i){
                 </a>
             </div>
 
-            <a href="#" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await heapSort(); })()" class="btn btn-success">Teste den Heap Sort</a>
+            <a href="#sort" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await heapSort(); })()" class="btn btn-success">Teste den Heap Sort</a>
 
         </div>
         <div>
@@ -683,7 +683,7 @@ function radixSort(array){
                 </a>
             </div>
 
-            <a href="#" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await radixSort(); })()" class="btn btn-success">Teste den Radix Sort</a>
+            <a href="#sort" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await radixSort(); })()" class="btn btn-success">Teste den Radix Sort</a>
 
         </div>
         <div>
@@ -723,7 +723,7 @@ function radixSort(array){
                 </a>
             </div>
 
-            <a href="#" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await shellSort(); })()" class="btn btn-success">Teste den Shell Sort</a>
+            <a href="#sort" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await shellSort(); })()" class="btn btn-success">Teste den Shell Sort</a>
 
         </div>
         <div>
@@ -778,7 +778,7 @@ function radixSort(array){
                 </a>
             </div>
 
-            <a href="#" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await countingSort(); })()" class="btn btn-success">Teste den Counting Sort</a>
+            <a href="#sort" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await countingSort(); })()" class="btn btn-success">Teste den Counting Sort</a>
 
         </div>
         <div>
@@ -837,7 +837,7 @@ function cocktailSort(array){
                 </a>
             </div>
 
-            <a href="#" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await cocktailSort(); })()" class="btn btn-success">Teste den Cocktail Sort</a>
+            <a href="#sort" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await cocktailSort(); })()" class="btn btn-success">Teste den Cocktail Sort</a>
 
         </div>
         <div>
@@ -883,7 +883,7 @@ function combSort(array){
                 </a>
             </div>
 
-            <a href="#" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await combSort(); })()" class="btn btn-success">Teste den Comb Sort</a>
+            <a href="#sort" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await combSort(); })()" class="btn btn-success">Teste den Comb Sort</a>
 
         </div>
         <div>
@@ -922,7 +922,7 @@ function gnomeSort(array){
                 </a>
             </div>
 
-            <a href="#" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await gnomeSort(); })()" class="btn btn-success">Teste den Gnome Sort</a>
+            <a href="#sort" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await gnomeSort(); })()" class="btn btn-success">Teste den Gnome Sort</a>
 
         </div>
 
