--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         }
 
         #explanation h5{
-            margin-top: 10px;
+            margin-top: 25px;
         }
 
         table{
@@ -312,11 +312,17 @@
                 </ul>
             </div>
 
+            <h5>Psuedocode:</h5>
+            <pre class="bg-light p-2"><code class="language-javascript">for i from 0 to n-1:
+    randomIndex = random number between i and n-1
+    swap elements at index i and randomIndex</code></pre>
+
                 <h5>JavaScript:</h5>
 <pre class="bg-light p-2"><code class="language-javascript">for(let i = 0; i &lt; n; i++){
     let randomIndex = Math.floor(Math.random() * n);
     swap(i, randomIndex);
 }</code></pre>
+
 
             <a href="#sort" onclick="(async () => { createBars(64); await shuffle(); })()" class="btn btn-success">Teste den Shuffle</a>
 
@@ -335,6 +341,12 @@
             </div>
 
             Wikipedia: <a href="https://de.wikipedia.org/wiki/Bogosort" target="_blank">Bogo Sort</a>
+
+            <h5>Psuedocode:</h5>
+            <pre class="bg-light p-2"><code class="language-javascript">while(!isSorted()){
+    shuffle();
+}
+</code></pre>
 
 <!--            JavaScript-->
             <h5>JavaScript:</h5>
@@ -366,6 +378,12 @@
             </div>
 
             Wikipedia: <a href="https://de.wikipedia.org/wiki/Bubblesort" target="_blank">Bubble Sort</a>
+
+            <h5>Psuedocode:</h5>
+            <pre class="bg-light p-2"><code class="language-javascript">for i from 0 to n-1:
+    for j from 1 to n:
+        if array[j-1] > array[j]:
+            swap elements at index j-1 and j</code></pre>
 
 <!--            JavaScript-->
             <h5>JavaScript:</h5>
@@ -402,6 +420,15 @@
             </div>
 
             Wikipedia: <a href="https://de.wikipedia.org/wiki/Selectionsort" target="_blank">Selection Sort</a>
+
+            <h5>Pseudocode:</h5>
+            <pre class="bg-light p-2"><code class="language-javascript">for i from 0 to n-1:
+    min = i
+    for j from i+1 to n:
+        if array[j] < array[min]:
+            min = j
+    if min != i:
+        swap elements at index i and min</code></pre>
 
 <!--            JavaScript-->
             <h5>JavaScript:</h5>
@@ -442,6 +469,15 @@
             </div>
 
             Wikipedia: <a href="https://de.wikipedia.org/wiki/Insertionsort" target="_blank">Insertion Sort</a>
+
+            <h5>Psuedocode:</h5>
+            <pre class="bg-light p-2"><code class="language-javascript">for i from 1 to n-1:
+    key = array[i]
+    j = i - 1
+    while j >= 0 and array[j] > key:
+        array[j+1] = array[j]
+        j = j - 1
+    array[j+1] = key</code></pre>
 
 <!--            JavaScript-->
             <h5>JavaScript:</h5>
