--- a/index.html
+++ b/index.html
@@ -249,6 +249,18 @@
         <button onclick="gnomeSort()" class="btn btn-secondary">
             Gnome Sort
         </button>
+        <button onclick="oddEvenSort()" class="btn btn-secondary">
+            Odd-Even Sort
+        </button>
+        <button onclick="cycleSort()" class="btn btn-secondary">
+            Cycle Sort
+        </button>
+        <button onclick="stoogeSort()" class="btn btn-secondary">
+            Stooge Sort
+        </button>
+        <button onclick="pancakeSort()" class="btn btn-secondary">
+            Pancake Sort
+        </button>
     </div>
 
     <div class="line"> </div>
@@ -962,7 +974,222 @@ function gnomeSort(array){
 
         </div>
 
+        <div>
+            <h3>Odd-Even Sort:</h3>
+<p>Der Odd-Even Sort ist ein einfacher Sortieralgorithmus, der die Elemente der Liste abwechselnd sortiert. Der Algorithmus vergleicht jedes Element mit seinem nachfolgenden Element und vertauscht sie, wenn sie in der falschen Reihenfolge sind. Dieser Prozess wird wiederholt, bis die Liste sortiert ist.</p>
+            <div>
+                <h5>Details:</h5>
+                <ul>
+                    <li><strong>Zeitkomplexität:</strong> O(n^2)</li>
+                    <li><strong>Autor:</strong> Unbekannt</li>
+                    <li><strong>Jahr:</strong> Unbekannt</li>
+                </ul>
+            </div>
 
+            Wikipedia: <a href="https://en.wikipedia.org/wiki/Odd%E2%80%93even_sort" target="_blank">Odd-Even Sort</a>
+
+<!--            JavaScript-->
+            <h5>JavaScript:</h5>
+<pre class="bg-light p-2"><code class="language-javascript">
+function oddEvenSort(array){
+    let sorted = false;
+    while(!sorted){
+        sorted = true;
+        for(let i = 1; i < array.length - 1; i += 2){
+            if(array[i] > array[i + 1]){
+                swap(array, i, i + 1);
+                sorted = false;
+            }
+        }
+        for(let i = 0; i < array.length - 1; i += 2){
+            if(array[i] > array[i + 1]){
+                swap(array, i, i + 1);
+                sorted = false;
+            }
+        }
+    }
+
+} </code></pre>
+
+            <div>
+                <h5>Beispiel:</h5>
+                <a href="https://upload.wikimedia.org/wikipedia/commons/c/c2/Sorting_odd_even_anim.gif" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/c2/Sorting_odd_even_anim.gif" alt="" loading="lazy">
+                </a>
+                <a href="https://upload.wikimedia.org/wikipedia/commons/1/1b/Odd_even_sort_animation.gif" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Odd_even_sort_animation.gif" alt="" loading="lazy">
+                </a>
+            </div>
+
+            <a href="#sort" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await oddEvenSort(); })()" class="btn btn-success">Teste den Odd-Even Sort</a>
+
+            <h3>Cycle Sort:</h3>
+            <p>Der Cycle Sort ist ein effizienter Sortieralgorithmus, der die Elemente der Liste an ihre richtige Position verschiebt, indem er die Zyklen in der Liste erkennt. Der Algorithmus ist bekannt für seine minimale Anzahl von Schreibzugriffen und seine Zeitkomplexität von O(n^2).</p>
+            <div>
+                <h5>Details:</h5>
+                <ul>
+                    <li><strong>Zeitkomplexität:</strong> O(n^2)</li>
+                    <li><strong>Autor:</strong> Harold N. Gabow</li>
+                    <li><strong>Jahr:</strong> 1975</li>
+                </ul>
+            </div>
+
+            Wikipedia: <a href="https://en.wikipedia.org/wiki/Cycle_sort" target="_blank">Cycle Sort</a>
+
+<!--            JavaScript-->
+            <h5>JavaScript:</h5>
+<pre class="bg-light p-2"><code class="language-javascript">
+function cycleSort(array){
+    let n = array.length;
+    for(let cycleStart = 0; cycleStart < n - 1; cycleStart++){
+        let item = array[cycleStart];
+        let pos = cycleStart;
+        for(let i = cycleStart + 1; i < n; i++){
+            if(array[i] < item){
+                pos++;
+            }
+        }
+        if(pos === cycleStart){
+            continue;
+        }
+        while(item === array[pos]){
+            pos++;
+        }
+        let temp = array[pos];
+        array[pos] = item;
+        item = temp;
+        while(pos !== cycleStart){
+            pos = cycleStart;
+            for(let i = cycleStart + 1; i < n; i++){
+                if(array[i] < item){
+                    pos++;
+                }
+            }
+            while(item === array[pos]){
+                pos++;
+            }
+            temp = array[pos];
+            array[pos] = item;
+            item = temp;
+        }
+    }
+} </code></pre>
+
+            <div>
+                <h5>Beispiel:</h5>
+                <a href="https://cdn.emre.me/sorting/cycle_sort.gif" target="_blank">
+                <img src="https://cdn.emre.me/sorting/cycle_sort.gif" alt="" loading="lazy">
+                </a>
+            </div>
+
+            <a href="#sort" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await cycleSort(); })()" class="btn btn-success">Teste den Cycle Sort</a>
+
+        </div>
+
+        <div>
+            <h3>Stooge Sort:</h3>
+            <p>Der Stooge Sort ist ein rekursiver Sortieralgorithmus, der die Elemente der Liste in drei Teile teilt und die ersten zwei Drittel rekursiv sortiert, gefolgt von den letzten zwei Dritteln und schließlich den ersten zwei Dritteln erneut. Der Algorithmus ist bekannt für seine schlechte Leistung und seine Zeitkomplexität von O(n^2.7).</p>
+            <div>
+                <h5>Details:</h5>
+                <ul>
+                    <li><strong>Zeitkomplexität:</strong> O(n^2.7)</li>
+                    <li><strong>Autor:</strong> Homer Reith</li>
+                    <li><strong>Jahr:</strong> 1975</li>
+                </ul>
+            </div>
+
+            Wikipedia: <a href="https://en.wikipedia.org/wiki/Stooge_sort" target="_blank">Stooge Sort</a>
+
+<!--            JavaScript-->
+            <h5>JavaScript:</h5>
+<pre class="bg-light p-2"><code class="language-javascript">
+function stoogeSort(array, l, h){
+    if(l >= h){
+        return;
+    }
+    if(array[l] > array[h]){
+        swap(array, l, h);
+    }
+    if(h - l + 1 > 2){
+        let t = Math.floor((h - l + 1) / 3);
+        stoogeSort(array, l, h - t);
+        stoogeSort(array, l + t, h);
+        stoogeSort(array, l, h - t);
+    }
+} </code></pre>
+
+
+            <div>
+                <h5>Beispiel:</h5>
+                <a href="https://upload.wikimedia.org/wikipedia/commons/f/f8/Sorting_stoogesort_anim.gif" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/f/f8/Sorting_stoogesort_anim.gif" alt="" loading="lazy">
+                </a>
+            </div>
+
+            <a href="#sort" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await stoogeSort(); })()" class="btn btn-success">Teste den Stooge Sort</a>
+
+        </div>
+
+        <div>
+            <h3>Pancake Sort:</h3>
+            <p>Der Pancake Sort ist ein Sortieralgorithmus, der die Elemente der Liste durch Umkehren sortiert. Der Algorithmus wählt das größte Element aus und wendet eine Reihe von Umkehrungen an, um es an die richtige Position zu bringen. Der Pancake Sort ist bekannt für seine minimale Anzahl von Schreibzugriffen und seine Zeitkomplexität von O(n^2).</p>
+            <div>
+                <h5>Details:</h5>
+                <ul>
+                    <li><strong>Zeitkomplexität:</strong> O(n^2)</li>
+                    <li><strong>Autor:</strong> Jacob E. Goodman, William H. Gates, Christos H. Papadimitriou</li>
+                    <li><strong>Jahr:</strong> 1979</li>
+                </ul>
+            </div>
+
+            Wikipedia: <a href="https://en.wikipedia.org/wiki/Pancake_sorting" target="_blank">Pancake Sort</a>
+
+<!--            JavaScript-->
+            <h5>JavaScript:</h5>
+<pre class="bg-light p-2"><code class="language-javascript">
+function pancakeSort(array){
+    let n = array.length;
+    for(let i = n; i > 1; i--){
+        let maxIndex = findMaxIndex(array, i);
+        if(maxIndex !== i - 1){
+            flip(array, maxIndex);
+            flip(array, i - 1);
+        }
+    }
+}
+
+function findMaxIndex(array, n){
+    let maxIndex = 0;
+    for(let i = 0; i < n; i++){
+        if(array[i] > array[maxIndex]){
+            maxIndex = i;
+        }
+    }
+    return maxIndex;
+}
+
+function flip(array, i){
+    let start = 0;
+    while(start < i){
+        swap(array, start, i);
+        start++;
+        i--;
+    }
+} </code></pre>
+
+            <div>
+                <h5>Beispiel:</h5>
+                <a href="https://static.miraheze.org/rosettacodewiki/c/ce/Pancake.gif" target="_blank">
+                <img src="https://static.miraheze.org/rosettacodewiki/c/ce/Pancake.gif" alt="" loading="lazy">
+                </a>
+                <a href="https://i.makeagif.com/media/12-13-2022/9cNqOR.gif" target="_blank">
+                <img src="https://i.makeagif.com/media/12-13-2022/9cNqOR.gif" alt="" loading="lazy">
+                </a>
+            </div>
+
+            <a href="#sort" onclick="(async () => { createBars(64); await shuffle(); resetStats(); await pancakeSort(); })()" class="btn btn-success">Teste den Pancake Sort</a>
+
+        </div>
     </div>
 
     <footer style="background-color: #f8f9fa; padding: 20px; text-align: center; margin-top: 20px;">
@@ -1622,6 +1849,128 @@ function gnomeSort(array){
                 isSorted();
             }
         }
+
+        // Odd-Even Sort
+        async function oddEvenSort() {
+            if (!isSorted()) {
+                let n = valueArray.length;
+                let sorted = false;
+
+                while (!sorted) {
+                    sorted = true;
+
+                    for (let i = 1; i < n - 1; i += 2) {
+                        if (await readAt(i) > await readAt(i + 1)) {
+                            await swap(i, i + 1);
+                            sorted = false;
+                        }
+                    }
+
+                    for (let i = 0; i < n - 1; i += 2) {
+                        if (await readAt(i) > await readAt(i + 1)) {
+                            await swap(i, i + 1);
+                            sorted = false;
+                        }
+                    }
+                }
+                isSorted();
+            }
+        }
+
+        // Stooge Sort
+        async function stoogeSort() {
+            async function stoogeSortRecursive(l, h) {
+                if (l >= h) return;
+
+                if (await readAt(l) > await readAt(h)) {
+                    await swap(l, h);
+                }
+
+                if (h - l + 1 > 2) {
+                    let t = Math.floor((h - l + 1) / 3);
+                    await stoogeSortRecursive(l, h - t);
+                    await stoogeSortRecursive(l + t, h);
+                    await stoogeSortRecursive(l, h - t);
+                }
+            }
+
+            if (!isSorted()) await stoogeSortRecursive(0, valueArray.length - 1);
+            isSorted();
+        }
+
+        // Pancake Sort
+        async function pancakeSort() {
+            async function flip(end) {
+                for (let i = 0; i <= end / 2; i++) {
+                    await swap(i, end - i);
+                }
+            }
+
+            async function findMax(n) {
+                let maxIndex = 0;
+                for (let i = 0; i < n; i++) {
+                    if (await readAt(i) > await readAt(maxIndex)) {
+                        maxIndex = i;
+                    }
+                }
+                return maxIndex;
+            }
+
+            if (!isSorted()) {
+                for (let currSize = valueArray.length; currSize > 1; --currSize) {
+                    let maxIndex = await findMax(currSize);
+                    if (maxIndex != currSize - 1) {
+                        await flip(maxIndex);
+                        await flip(currSize - 1);
+                    }
+                }
+                isSorted();
+            }
+        }
+
+        async function cycleSort() {
+            if (!isSorted()) {
+                let n = valueArray.length;
+                for (let cycleStart = 0; cycleStart < n - 1; cycleStart++) {
+                    let item = await readAt(cycleStart)
+                    let pos = cycleStart;
+                    for (let i = cycleStart + 1; i < n; i++) {
+                        if (await readAt(i) < item) {
+                            pos++;
+                        }
+                    }
+                    if (pos === cycleStart) {
+                        continue;
+                    }
+                    while (item === await readAt(pos)) {
+                        pos++;
+                    }
+                    if (pos !== cycleStart) {
+                        let temp = item;
+                        item = await readAt(pos);
+                        await writeAt(pos, temp);
+                        while (pos !== cycleStart) {
+                            pos = cycleStart;
+                            for (let i = cycleStart + 1; i < n; i++) {
+                                if (await readAt(i) < item) {
+                                    pos++;
+                                }
+                            }
+                            while (item === await readAt(pos)) {
+                                pos++;
+                            }
+                            if (item !== await readAt(pos)) {
+                                temp = item;
+                                item = await readAt(pos);
+                                await writeAt(pos, temp);
+                            }
+                        }
+                    }
+                }
+                isSorted();
+            }
+        }
+
 
     </script>
 </body>
