--- a/index.html
+++ b/index.html
@@ -24,6 +24,30 @@
     <meta property="og:locale" content="de_DE">
 
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+        ::-webkit-scrollbar {
+            width: 10px;
+        }
+
+        ::-webkit-scrollbar-track {
+            background: #f7f9fa;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: #888;
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background: #555;
+        }
+
+        body {
+            font-family: 'Poppins', sans-serif;
+            background: #f7f9fa;
+            color: #333;
+        }
+
         #sortArea{
             height: 100%;
             display: flex;
